After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 674829 - gnome-settings-daemon crashed in engine_get_icon_priv()
gnome-settings-daemon crashed in engine_get_icon_priv()
Status: RESOLVED FIXED
Product: gnome-settings-daemon
Classification: Core
Component: power
3.4.x
Other Linux
: Normal critical
: ---
Assigned To: Richard Hughes
gnome-settings-daemon-maint
Depends on:
Blocks:
 
 
Reported: 2012-04-25 21:05 UTC by Michael Terry
Modified: 2012-04-26 13:33 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Proposed patch (1.55 KB, patch)
2012-04-25 21:17 UTC, Michael Terry
accepted-commit_now Details | Review

Description Michael Terry 2012-04-25 21:05:43 UTC
Ubuntu got this crash report:
https://bugs.launchpad.net/ubuntu/+source/gnome-settings-daemon/+bug/969535

  • #0 engine_get_icon_priv
    at gsd-power-manager.c line 596
  • #1 engine_get_icon
    at gsd-power-manager.c line 637
  • #2 engine_get_icon_property_variant
    at gsd-power-manager.c line 347
  • #3 invoke_get_all_properties_in_idle_cb
    at /build/buildd/glib2.0-2.32.0/./gio/gdbusconnection.c line 4354
  • #4 invoke_get_all_properties_in_idle_cb
    at /build/buildd/glib2.0-2.32.0/./gio/gdbusconnection.c line 4318

What seems to be happening is that the power manager registers its interfaces on DBus, but blindly handles requests on those interfaces, regardless of whether the power manager is start()'d or stop()'d.

I'll attach a patch that checks for manager status before processing property or method requests on the DBus interface.  That should fix this particular code path.

But, it strikes me as a problem that the code never actually unregisters the DBus objects it creates when the manager is disposed.  That is a likely bug too.
Comment 1 Michael Terry 2012-04-25 21:17:11 UTC
Created attachment 212834 [details] [review]
Proposed patch
Comment 2 Richard Hughes 2012-04-26 07:34:31 UTC
Review of attachment 212834 [details] [review]:

Looks good, thanks.
Comment 3 Michael Terry 2012-04-26 13:33:13 UTC
commit da8d514e91ce1b95960d3a6242598b0045455aff
Author: Michael Terry <michael.terry@canonical.com>
Date:   Wed Apr 25 17:16:37 2012 -0400

    power: Ignore DBus requests while stopped
    
    https://bugzilla.gnome.org/show_bug.cgi?id=674829