power: Ignore DBus requests while stopped

https://bugzilla.gnome.org/show_bug.cgi?id=674829